src/snapshots/fermat__layout_fun__stack.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::stack(LayoutFun::text(Rc::new(LayoutExpr::Text(\"foobar\")), config),\n                 LayoutFun::text(Rc::new(LayoutExpr::Text(\"baz\")), config),\n                 config).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Stack(
                Text(
                    "foobar",
                ),
                Text(
                    "baz",
                ),
            ),
            span: 3,
            cost: 1,
            cost_gradient: 0,
        },
    ),
    (
        2,
        Layout {
            layout_expr: Stack(
                Text(
                    "foobar",
                ),
                Text(
                    "baz",
                ),
            ),
            span: 3,
            cost: 1,
            cost_gradient: 100,
        },
    ),
    (
        5,
        Layout {
            layout_expr: Stack(
                Text(
                    "foobar",
                ),
                Text(
                    "baz",
                ),
            ),
            span: 3,
            cost: 301,
            cost_gradient: 200,
        },
    ),
]
