src/snapshots/fermat__layout_fun__text.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::text(Rc::new(LayoutExpr::Text(\"foo\")),\n                Config{right_margin: 5,\n                       newline_cost: 1,\n                       beyond_right_margin_cost: 100,\n                       full_indent: 0,\n                       half_indent: 0,}).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Text(
                "foo",
            ),
            span: 3,
            cost: 0,
            cost_gradient: 0,
        },
    ),
    (
        2,
        Layout {
            layout_expr: Text(
                "foo",
            ),
            span: 3,
            cost: 0,
            cost_gradient: 100,
        },
    ),
]
